fixed feature image size and spacing

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -59,7 +59,7 @@
 }
 
 .testimonial-card {
-  height: 20rem;
+  height: 18rem;
 }
 
 .featured-project {
@@ -83,6 +83,10 @@
 .featured-project {
   gap: 1rem;
 
+  img {
+    width: 75%;
+  }
+
   button {
     width: 85%;
     height: 4rem;
@@ -91,6 +95,8 @@
     color: var(--card-text-alt-2);
     border: none;
     font-size: 1.5rem;
+    display: grid;
+    place-items: center;
   }
 }
 
@@ -98,7 +104,7 @@
   width: 100%;
   color: var(--card-text-alt-2) !important;
   background: var(--card-bg-alt-2) !important;
-  height: 7rem;
+  height: 10rem;
   border-radius: 5px;
   text-align: left;
   padding: 0.5%;
